Fixed styling for p tag to have better spacing

--- a/noteRenderer/src/markdown.sass
+++ b/noteRenderer/src/markdown.sass
@@ -59,6 +59,9 @@ a
 	@include scaleProp(font-size, 12pt, 14pt, 14pt, 16pt, 16pt)
 	line-height: 150%
 
+.md-p
+	margin-bottom: 16px
+
 th
 	text-align: center
 
